# casper-open-topic

./: ERC-20-casper.md  README.md  event.md
counter_event/: Makefile  event.md
counter_event/contract/: Cargo.toml
counter_event/contract/src/: counter.rs  logger.rs
counter_event/tests/src/: integration_tests.rs
test_getcaller/: Makefile
test_getcaller/caller_contract/: Cargo.toml
test_getcaller/caller_contract/src/: caller_recorder.rs  contract_caller.rs  contract_caller2.rs
test_getcaller/result/: stack1.txt  stack2.txt  stack3.txt
test_getcaller/tests/: Cargo.toml
test_getcaller/tests/src/: caller_record_tests.rs  erc20_caller.rs
