[package]
name = "contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.3.3"
casper-types = "1.3.3"

[[bin]]
name = "caller_recorder"
path = "src/caller_recorder.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "contract_caller"
path = "src/contract_caller.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "contract_caller2"
path = "src/contract_caller2.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

